# iatcc

./: .gitignore  LICENSE  README.md  iatcc.cabal  package.yaml  stack.yaml
app/: Main.hs
rt/: rt.c  sys.c
src/: Prelude.hs
src/Iatcc/: AST.hs  Compiler.hs  Emitter.hs  Parser.hs
test/: Spec.hs
