name:                iatcc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/yubrot/iatcc#readme
license:             BSD3
license-file:        LICENSE
author:              yubrot
maintainer:          yubrot@gmail.com
copyright:           2017 yubrot
category:            Compilers/Interpreters
build-type:          Simple
extra-source-files:  README.md
data-files:          rt/rt.c, rt/sys.c
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Iatcc.AST
                       Iatcc.Parser
                       Iatcc.Emitter
                       Iatcc.Compiler
  other-modules:       Prelude
                       Paths_iatcc
  ghc-options:         -Wall -Werror -fno-warn-type-defaults -fno-warn-name-shadowing
  build-depends:       base-noprelude, basic-prelude, mtl, megaparsec, temporary, process
  default-extensions:  OverloadedStrings
                       TypeOperators
                       BangPatterns, LambdaCase, RecordWildCards, BinaryLiterals
                       PatternSynonyms, ViewPatterns
                       StandaloneDeriving
                       DeriveFunctor, DeriveFoldable, DeriveTraversable
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       TypeFamilies
                       ConstraintKinds
  default-language:    Haskell2010

executable iatcc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, iatcc
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010

test-suite iatcc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N -fno-warn-name-shadowing -fno-warn-missing-signatures
  build-depends:       base, HUnit, iatcc
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yubrot/iatcc
